# p2p-data-collector

./: .gitignore  CMakeLists.txt  Makefile  README.md  colinha_prova.txt  filereader.c  filereader.h  filereadertest.c  header_struct.h  main  main.c  protocoltypes.h  protocolutils.c  protocolutils.h  protocolutilstest.c  receiver.c  run_forever_receiver.bash  run_forever_sender.bash  sender.c  sendsocket.c  sendsocket.h  serversockets.c  serversockets.h  showip  showip.c  socket  socket.c
files/logs/: file2.txt
files/to_send/logs/: file1.txt  file3.txt
files/to_send_1490643345_parts/: segment.aa  segment.ab  segment.ac  segment.ad  segment.ae  segment.af  segment.ag  segment.ah  segment.ai  segment.aj  segment.ak  segment.al  segment.am  segment.an  segment.ao  segment.ap  segment.aq  segment.ar  segment.as  segment.at  segment.au  segment.av  segment.aw  segment.ax  segment.ay  segment.az  segment.ba  segment.bb  segment.bc  segment.bd  segment.be  segment.bf  segment.bg  segment.bh  segment.bi  segment.bj  segment.bk  segment.bl  segment.bm  segment.bn  (+12 more)
include/: fileutils.h  protocoltypes.h  protocolutils.h  receiver.h  receiversockets.h  sender.h  sendersockets.h  tester.h
src/: tester.c
src/exec/: receivermain.c  sendermain.c  testmain.c
src/protocol/: protocolutils.c
src/receiver/: receiver.c  receiversockets.c
src/sender/: sender.c  sendersockets.c
src/utils/: fileutils.c  protocolutils.c
test/: filereadertest.c  protocolutilstest.c
